force-app/main/default/objects/aecm__Function_Stakeholder__c/aecm__Function_Stakeholder__c.object-meta.xml
<CustomObject>
    <description>Establishes a relationship between a Stakeholder and a Function.</description>
    <label>Function Stakeholder</label>
    <nameField>
        <displayFormat>FR-{mm}{yy}{000000}</displayFormat>
        <label>Function Stakeholder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Function Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>