force-app/main/default/objects/aecm__Function_Stakeholder__c/fields/aecm__Function__c.field-meta.xml
<CustomField>
    <fullName>aecm__Function__c</fullName>
    <label>Functional Unit</label>
    <referenceTo>aecm__Functional_Unit__c</referenceTo>
    <relationshipLabel>Function Stakeholders</relationshipLabel>
    <relationshipName>Function_Stakeholders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>