force-app/main/default/objects/aecm__Function_Stakeholder__c/fields/aecm__RACI__c.field-meta.xml
<CustomField>
    <fullName>aecm__RACI__c</fullName>
    <label>RACI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aecm__Stakeholder_RACI</valueSetName>
    </valueSet>
</CustomField>