force-app/main/default/objects/aecm__Function_Stakeholder__c/fields/aecm__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional Area Senior Executive</fullName>
            </value>
            <value>
                <fullName>Functional Area Executive</fullName>
            </value>
            <value>
                <fullName>Functional Area Manager</fullName>
            </value>
            <value>
                <fullName>Functional Area Influencer</fullName>
            </value>
            <value>
                <fullName>Functional Area SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>