force-app/main/default/objects/aecm__Function_Stakeholder__c/fields/aecm__Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>aecm__Stakeholder__c</fullName>
    <label>Stakeholder ID</label>
    <referenceTo>aecm__Stakeholder__c</referenceTo>
    <relationshipLabel>Function Stakeholders</relationshipLabel>
    <relationshipName>Function_Stakeholders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>