force-app/main/default/objects/aecm__Function_Stakeholder__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Function__c</columns>
    <columns>aecm__Stakeholder_Name__c</columns>
    <columns>aecm__Relationship_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>