force-app/main/default/objects/aecm__Function_Stakeholder__c/listViews/aecm__Stakeholder_RACI.listView-meta.xml
<ListView>
    <fullName>aecm__Stakeholder_RACI</fullName>
    <columns>NAME</columns>
    <columns>aecm__Function__c</columns>
    <columns>aecm__Stakeholder_Name__c</columns>
    <columns>aecm__Relationship_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Function__c</field>
        <operation>startsWith</operation>
        <value>Salesforce</value>
    </filters>
    <label>Stakeholder RACI</label>
</ListView>